--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: nnlib2Rcpp
 Type: Package
 Title: Collection of Artificial Neural Networks
-Version: 0.1.1
+Version: 0.1.2
+Author: Vasilis Nikolaidis [aut, cph, cre] (<https://orcid.org/0000-0003-1471-8788>)
 Maintainer: Vasilis Nikolaidis <vnikolaidis@us.uop.gr>
-Description: A collection of artificial neural networks. Currently includes versions of 'BP', 'Autoencoder', 'LVQ' (supervised and unsupervised), 'MAM'. All NNs are created using 'nnlib2' C++ NN library and accessed via 'Rcpp'.
+Description: Another collection of neural networks. Includes versions of 'BP', 'Autoencoder', 'LVQ' (supervised and unsupervised), 'MAM'.
 LazyData: true
 LinkingTo: Rcpp
 Imports: Rcpp , methods
 License: MIT + file LICENSE
-Authors@R: person(given = "Vasilis", family = "Nikolaidis", email = "vnikolaidis@us.uop.gr", role = c("aut", "cre"))
+Authors@R: person(given = "Vasilis", family = "Nikolaidis", email = "vnikolaidis@us.uop.gr", role = c("aut", "cph", "cre"), comment = c(ORCID = "0000-0003-1471-8788"))
 URL: https://github.com/VNNikolaidis/nnlib2Rcpp
-RcppModules: 
-RoxygenNote: 7.0.2
 Encoding: UTF-8
