--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: nnlib2Rcpp
 Type: Package
-Title: Collection of Artificial Neural Networks
+Title: A Collection of Neural Networks
 Version: 0.1.2
 Author: Vasilis Nikolaidis [aut, cph, cre] (<https://orcid.org/0000-0003-1471-8788>)
 Maintainer: Vasilis Nikolaidis <vnikolaidis@us.uop.gr>
