--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: nnlib2Rcpp
 Type: Package
 Title: A Collection of Neural Networks
-Version: 0.1.2
+Version: 0.1.4
 Author: Vasilis Nikolaidis [aut, cph, cre] (<https://orcid.org/0000-0003-1471-8788>)
 Maintainer: Vasilis Nikolaidis <vnikolaidis@us.uop.gr>
-Description: Another collection of neural networks. Includes versions of 'BP', 'Autoencoder', 'LVQ' (supervised and unsupervised), 'MAM'.
+Description: Another neural network library, with Versions of several NN models included and tools to define new ones.
 LazyData: true
 LinkingTo: Rcpp
 Imports: Rcpp , methods
