--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: A Collection of Neural Networks
 Version: 0.1.4
 Author: Vasilis Nikolaidis [aut, cph, cre] (<https://orcid.org/0000-0003-1471-8788>)
 Maintainer: Vasilis Nikolaidis <vnikolaidis@us.uop.gr>
-Description: Another neural network library, with Versions of several NN models included and tools to define new ones.
+Description: A package containing versions of Autoencoder,BP,LVQ,MAM neural networks and a module to define custom models.
 LazyData: true
 LinkingTo: Rcpp
 Imports: Rcpp , methods
