--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: nnlib2Rcpp
 Type: Package
-Title: A Collection of Neural Networks
-Version: 0.1.8
+Title: A Tool for Creating Custom Neural Networks in C++ and using Them in R
+Version: 0.1.9
 Author: Vasilis Nikolaidis [aut, cph, cre] (<https://orcid.org/0000-0003-1471-8788>)
 Maintainer: Vasilis Nikolaidis <vnikolaidis@us.uop.gr>
-Description: Contains versions of Autoencoder, BP, LVQ, MAM NN and a module to define custom neural networks.
+Description: Contains a module to define neural networks from custom components and versions of Autoencoder, BP, LVQ, MAM NN.
 LinkingTo: Rcpp
 Imports: Rcpp , methods
 License: MIT + file LICENSE
