--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,12 +3,12 @@ Type: Package
 Title: A Tool for Creating Custom Neural Networks in C++ and using Them in R
 Version: 0.2.2
 Author: Vasilis Nikolaidis [aut, cph, cre] (<https://orcid.org/0000-0003-1471-8788>)
-Maintainer: Vasilis Nikolaidis <vnikolaidis@us.uop.gr>
+Maintainer: Vasilis Nikolaidis <v.nikolaidis@uop.gr>
 Description: Contains a module to define neural networks from custom components and versions of Autoencoder, BP, LVQ, MAM NN.
 LinkingTo: Rcpp
 Imports: Rcpp , methods
 License: MIT + file LICENSE
-Authors@R: person(given = "Vasilis", family = "Nikolaidis", email = "vnikolaidis@us.uop.gr", role = c("aut", "cph", "cre"), comment = c(ORCID = "0000-0003-1471-8788"))
+Authors@R: person(given = "Vasilis", family = "Nikolaidis", email = "v.nikolaidis@uop.gr", role = c("aut", "cph", "cre"), comment = c(ORCID = "0000-0003-1471-8788"))
 URL: https://github.com/VNNikolaidis/nnlib2Rcpp
 BugReports: https://github.com/VNNikolaidis/nnlib2Rcpp/issues
 Encoding: UTF-8
