--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,6 @@ exportPattern("^[[:alpha:]]+")
 useDynLib(nnlib2Rcpp)
 importFrom(Rcpp, sourceCpp)
 importFrom(methods, new)
+importFrom("graphics", "points")
+importFrom("utils", "capture.output")
+importFrom("class", "knn")
